# my_project_stock

./: Function.py  README.md  main.py  pyproject.toml  stock.db
