[tool.poetry]
name = "my-project-stock"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
datetime = "^5.5"
plotly = "^5.24.1"
pytz = "^2024.2"
yfinance = "^0.2.51"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
